--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,8 @@
 
 html, body{
     font-family: 'Roboto', sans-serif;   
-    font-weight: 700;  
+    font-weight: 700;
+    color:lightskyblue; 
 }
 *{
     margin: 0;
