--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@ html, body{
     height: 100%;
     width: 100%;
     background: rgb(2,0,36);
-    background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
+    background-image: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
     background-position: pointer;
     background-size: cover;
     padding-left: 2%;
