--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@ html, body{
     height: 100%;
     width: 100%;
     background: rgb(2,0,36);
-    background-image: url(Images/board.png);
+    background-image: url(Images/polygon.png);
     background-position: pointer;
     background-size: cover;
     padding-left: 2%;
