--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,6 +41,13 @@ html, body{
 .github:hover{
     transform: translateY(-7%);
 }
+.discord{
+    width: 70px;
+    cursor: pointer;
+}
+.discord:hover{
+    transform: translateY(-7%);
+}
 nav{
     flex: 1;
     padding-left: 60px;
