--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,17 +13,26 @@ html, body{
 .container{
     height: 100%;
     width: 100%;
-    background-image: url(Images/polygon.png);
-    height: 100%;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-size: cover;
+    overflow: hidden;
+    /* background-size: cover; */
     padding-left: 2%;
     padding-right: 2%;
     box-sizing: border-box;
     position: relative;
+}
+.sliding-background{
+    background: url("Images/polygon.png") repeat-x;
+    height: 500px;
+    width: 5076px;
+    animation: slide 60s linear infinite;
+}
+@keyframes slide{
+    0%{
+      transform: translate3d(0, 0, 0);
+    }
+    100%{
+      transform: translate3d(-1692px, 0, 0); /* The image width */
+    }
 }
 .navbar{
     width: 100%;
@@ -40,7 +49,7 @@ html, body{
 }
 .github{
     max-width:80%;
-    height:auto;
+    height:80%;
     cursor: pointer;
 }
 .github:hover{
@@ -48,7 +57,7 @@ html, body{
 }
 .discord{
     max-width:100%;
-    height:auto;
+    height:100%;
     cursor: pointer;
 }
 .discord:hover{
@@ -56,7 +65,7 @@ html, body{
 }
 .stackoverflow{
     max-width:60%;
-    height:auto;
+    height:60%;
     cursor: pointer;
 }
 .stackoverflow:hover{
