--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,7 @@ html, body{
     height: 100%;
     width: 100%;
     overflow: hidden;
-    /* background-size: cover; */
+    background-size: cover;
     padding-left: 2%;
     padding-right: 2%;
     box-sizing: border-box;
