--- a/stylesheet.css
+++ b/stylesheet.css
@@ -48,7 +48,7 @@ html, body{
     cursor: pointer;
 }
 .github{
-    max-width:80%;
+    width:80%;
     height:80%;
     cursor: pointer;
 }
@@ -56,7 +56,7 @@ html, body{
     transform: translateY(-7%);
 }
 .discord{
-    max-width:100%;
+    width:100%;
     height:100%;
     cursor: pointer;
 }
@@ -64,7 +64,7 @@ html, body{
     transform: translateY(-7%);
 }
 .stackoverflow{
-    max-width:60%;
+    width:60%;
     height:60%;
     cursor: pointer;
 }
