--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,6 +36,13 @@ html, body{
     width: 200px;
     cursor: pointer;
 }
+.img {
+    float: left;
+    width:  100px;
+    height: 100px;
+    background-size: cover;
+}
+
 .github{
     width:80px;
     cursor: pointer;
