--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,11 +36,10 @@ html, body{
     width: 200px;
     cursor: pointer;
 }
-.img {
+img {
     float: left;
     width:  100px;
     height: 100px;
-    background-size: cover;
 }
 
 .github{
