--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,7 +26,7 @@ html, body{
 .navbar{
     width: 100%;
     height: 30vh;
-    margin: 50%;
+    margin: auto;
     display: flex;
     align-items: center;
     text-align: left;
@@ -42,7 +42,7 @@ html, body{
     height: 100px;
 }
 
-.github{
+/* .github{
     width:80px;
     cursor: pointer;
 }
@@ -62,7 +62,7 @@ html, body{
 }
 .stackoverflow:hover{
     transform: translateY(-7%);
-}
+} */
 nav{
     flex: 1;
     padding-left: 40px;
