--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,7 +42,7 @@ html, body{
     height: 100px;
 }
 
-/* .github{
+.github{
     width:80px;
     cursor: pointer;
 }
@@ -62,7 +62,7 @@ html, body{
 }
 .stackoverflow:hover{
     transform: translateY(-7%);
-} */
+}
 nav{
     flex: 1;
     padding-left: 40px;
