--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,7 +26,7 @@ html, body{
 .navbar{
     width: 100%;
     height: 30vh;
-    margin: auto;
+    margin-left: 30px;
     display: flex;
     align-items: center;
     text-align: left;
