--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,7 +26,8 @@ html, body{
 .navbar{
     width: 100%;
     height: 30vh;
-    margin-left: -30px;
+    margin: auto;
+    margin-right: auto;
     display: flex;
     align-items: center;
     text-align: left;
