--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,9 +27,8 @@ html, body{
     width: 100%;
     height: 30vh;
     margin: auto;
-    margin-right: auto;
-    display: flex;
-    align-items: center;
+    display:flex;
+    align-items:left;
     text-align: left;
     
 }
