updated stylesheet and html abt me

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,7 +28,7 @@ html, body{
     height: 30vh;
     margin: auto;
     display:flex;
-    align-items:left;
+    align-items:center;
     text-align: left;
     
 }
