--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,6 +44,7 @@ html, body{
 
 .github{
     width:80px;
+    object-fit: contain;
     cursor: pointer;
 }
 .github:hover{
@@ -51,6 +52,7 @@ html, body{
 }
 .discord{
     width:80px;
+    object-fit: contain;
     cursor: pointer;
 }
 .discord:hover{
@@ -58,6 +60,7 @@ html, body{
 }
 .stackoverflow{
     width:80px;
+    object-fit: contain;
     cursor: pointer;
 }
 .stackoverflow:hover{
