--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,8 +29,10 @@ html, body{
     margin: auto;
     display:flex;
     align-items:center;
-    text-align: left;
-    
+    text-align: left; 
+}
+.navbar h1 {
+    translate: -20%;
 }
 .logo{
     width: 200px;
