--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,27 +44,27 @@ html, body{
     height: 100px;
 }
 
-.github{
-    width:80px;
+/* .github{
+    width: 70px;
     cursor: pointer;
 }
 .github:hover{
     transform: translateY(-7%);
 }
 .discord{
-    width:80px;
+    width:70px;
     cursor: pointer;
 }
 .discord:hover{
     transform: translateY(-7%);
 }
 .stackoverflow{
-    width:80px;
+    width:70px;
     cursor: pointer;
 }
 .stackoverflow:hover{
     transform: translateY(-7%);
-}
+} */
 nav{
     flex: 1;
     padding-left: 40px;
