--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,9 +26,9 @@ html, body{
 .navbar{
     width: 100%;
     height: 25vh;
-    margin: auto;
+    margin: 30%;
     display:flex;
-    align-items:flex;
+    align-items:center;
     text-align: left; 
 }
 .navbar h1 {
