--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,7 +29,7 @@ html, body{
     margin: 30%;
     display:flex;
     align-items:center;
-    text-align: left; 
+    text-align: flex; 
 }
 .navbar h1 {
     translate: -20%;
