--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,10 +26,10 @@ html, body{
 .navbar{
     width: 100%;
     height: 25vh;
-    margin: 30%;
+    margin: -10px;
     display:flex;
     align-items:center;
-    text-align: flex; 
+    text-align: left; 
 }
 .navbar h1 {
     translate: -20%;
