--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,7 +26,7 @@ html, body{
 .navbar{
     width: 100%;
     height: 25vh;
-    margin: 40px;
+    margin: auto;
     display:flex;
     align-items:center;
     text-align: left; 
