--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,7 +24,7 @@ html, body{
     position: relative;
 }
 .navbar{
-    width:auto;
+    width:100%;
     height: 25vh;
     margin: auto;
     display:flex;
