--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,6 +22,7 @@ html, body{
     padding-right: 2%;
     box-sizing: border-box;
     position: relative;
+    text-align: justify;
 }
 .navbar{
     width:100%;
