--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,12 +25,21 @@ html, body{
 }
 .navbar{
     width:100%;
-    height: 25vh;
+
+    /*I removed this height thing so the text wont be waay up on the page*/
+    /* height: 25vh; */
     margin: auto;
     display:flex;
     align-items:center;
     text-align: left; 
 }
+
+/*Hey this is the new class. It is basically just justify-content center!*/
+.text-container{
+    display: flex;
+    justify-content: center;
+}
+
 .logo{
     width: 200px;
     cursor: pointer;
