--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,11 +25,10 @@ html, body{
 }
 .navbar{
     width:100%;
-    height: 25vh;
-    margin: auto;
     display:flex;
     align-items:center;
-    justify-content: center;
+    text-align: left; 
+    justify-content: left;
 }
 .logo{
     width: 200px;
