--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,7 +26,7 @@ html, body{
 .navbar{
     width:100%;
     /*I removed this height thing so the text wont be waay up on the page*/
-    height: 25vh;
+    /* height: 25vh; */
     margin: auto;
     display:flex;
     align-items:center;
