--- a/stylesheet.css
+++ b/stylesheet.css
@@ -74,12 +74,13 @@ nav ul li a{
 }
 section {
     background-color: #141863;
-    margin-bottom: 50px;
+    margin-bottom: 24px;
     min-height: 320px;
     height: flex;
     padding-left: 24px;
     padding-right: 24px;
-    padding-bottom: 10px;
+    padding-bottom: 24px;
+    padding-top: 24px;
     border-radius: 20px;
     border-color: #FFFFFF;
     border: 2px solid Black;
