--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,7 +38,7 @@ html, body{
     display: flex;
     justify-content: center;
 }
-.github{
+/* .github{
     width: 70px;
     cursor: pointer;
 }
@@ -58,7 +58,7 @@ html, body{
 }
 .stackoverflow:hover{
     transform: translateY(-7%);
-}
+} */
 nav{
     flex: 1;
     padding-left: 40px;
