--- a/stylesheet.css
+++ b/stylesheet.css
@@ -83,16 +83,16 @@ section {
     padding-top: 10px;
     border-radius: 20px;
     border-color: #FFFFFF;
-    border: 2px solid Black;
+    border: 1px solid Black;
     box-shadow: 0px 10px 20px black;
     }
     img.small {
     border-radius: 35px;
-    border: 2px solid Black;
+    border: 1px solid Black;
     }
     img.medium {
     border-radius: 35px;
-    border: 2px solid Black;
+    border: 1px solid Black;
     height: 210px;
     width: 520px;
     }
@@ -101,4 +101,14 @@ section {
     }
 section:hover {
     box-shadow: 0px 20px 40px black;
+}
+mini_section {
+    border-radius: 35px;
+    border: 1px solid #a1d5ff;
+    height: flex;
+    width: flex;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
