--- a/stylesheet.css
+++ b/stylesheet.css
@@ -102,7 +102,7 @@ section {
 section:hover {
     box-shadow: 0px 20px 40px black;
 }
-mini_section {
+minisection {
     border-radius: 35px;
     border: 1px solid #a1d5ff;
     height: flex;
@@ -111,4 +111,9 @@ mini_section {
     padding-right: 10px;
     padding-bottom: 10px;
     padding-top: 10px;
+}
+minisection img {
+    border-radius: 35px;
+    height: auto;
+    width: auto;
 }
