--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,6 +10,7 @@ html, body{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    margin-bottom: 10%;
 }
 *{
     margin: 0;
