--- a/stylesheet.css
+++ b/stylesheet.css
@@ -85,6 +85,8 @@ section {
     padding-right: 24px;
     padding-bottom: 24px;
     padding-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 20px;
     border-color: #FFFFFF;
     border: 1px solid Black;
