updated html and css

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -79,7 +79,7 @@ section {
     margin-bottom: 24px;
     min-height: flex;
     width: fit-content;
-    min-width: flex;
+    min-width: fit-content;
     height: flex;
     padding-left: 24px;
     padding-right: 24px;
