--- a/stylesheet.css
+++ b/stylesheet.css
@@ -134,8 +134,8 @@ section {
   padding-right: 24px;
   padding-bottom: 24px;
   padding-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: auto;
+  margin-right: auto;
   border-radius: 20px;
   border-color: #FFFFFF;
   }
