--- a/stylesheet.css
+++ b/stylesheet.css
@@ -153,6 +153,9 @@ section {
     padding-top: 15px;
     text-align:center;
   }
+  section dumbotoken{
+    width: 30px;
+  }
 
 footer {
   margin-bottom: 15px;
