--- a/stylesheet.css
+++ b/stylesheet.css
@@ -104,6 +104,10 @@ main {
     overflow: hidden; }
     main#contact h1 {
       margin-top: 30px; }
+  main#cbot {
+    overflow: hidden; }
+    main#cbot h1 {
+      margin-top: 30px;}
 
 .github{
   margin-right: 10px;
