--- a/stylesheet.css
+++ b/stylesheet.css
@@ -100,9 +100,9 @@ main {
     overflow: hidden; }
     main#experiences h1 {
       margin-top: 30px; }
-  main#contact {
+  main#links {
     overflow: hidden; }
-    main#contact h1 {
+    main#links h1 {
       margin-top: 30px; }
   main#cbot {
     overflow: hidden; }
