--- a/stylesheet.css
+++ b/stylesheet.css
@@ -161,3 +161,22 @@ section {
 footer {
   margin-bottom: 15px;
 }
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #222; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #82b8ff; 
+}
+
+/* Handle on hover
+::-webkit-scrollbar-thumb:hover {
+  background: #0000FF; 
+} */
