--- a/Projects/projects.css
+++ b/Projects/projects.css
@@ -78,35 +78,13 @@ nav a:hover::before {
 main {
   padding: 4rem;
   margin-bottom: 10vh; }
-  main#home {
-    overflow: hidden; }
-    main#home h1 {
-      margin-top: 20vh;
-      font-size: 6rem; 
-      color: #82b8ff;
-    }
-    main#home h1:hover {
-      transform: translateY(-7%);
-    }
-  main#about {
-    overflow: hidden; }
-    main#about h1 {
-      margin-top: 30px; }
-  main#projects {
-    overflow: hidden; }
-    main#projects h1 {
-      margin-top: 30px; }
-  main#experiences {
-    overflow: hidden; }
-    main#experiences h1 {
-      margin-top: 30px; }
-  main#links {
-    overflow: hidden; }
-    main#links h1 {
-      margin-top: 30px; }
   main#cbot {
     overflow: hidden; }
     main#cbot h1 {
+      margin-top: 30px;}
+  main#cbotsec {
+    overflow: hidden; }
+    main#cbotsec h1 {
       margin-top: 30px;}
 
 .github{
