--- a/main.css
+++ b/main.css
@@ -85,9 +85,15 @@ main {
       font-size: 6rem; 
       color: #82b8ff;
     }
-    main#home h1:hover {
+    main#home h1 span#header:hover {
       transform: translateY(-7%);
     }
+    /* main#header {
+      color: #82b8ff;
+    }
+    #header:hover {
+        transform: translateY(-7%);
+    } */
   main#about {
     overflow: hidden; }
     main#about h1 {
@@ -104,10 +110,6 @@ main {
     overflow: hidden; }
     main#links h1 {
       margin-top: 30px; }
-  main#cbot {
-    overflow: hidden; }
-    main#cbot h1 {
-      margin-top: 30px;}
 
 .github{
   margin-right: 10px;
