--- a/main.css
+++ b/main.css
@@ -9,37 +9,30 @@ body {
 	font-family: 'Work Sans', sans-serif;
 	font-weight: 800;
 }
-
 .container {
 	width: 80%;
 	margin: 0 auto;
 }
-
 header {
   background: #82b8ff;
 }
-
 header::after {
   content: '';
   display: table;
   clear: both;
 }
-
 .logo {
   float: left;
   padding: 10px 0;
 }
-
 nav {
   float: right;
 }
-
 nav ul {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-
 nav li {
   display: inline-block;
   margin-left: 70px;
@@ -47,7 +40,6 @@ nav li {
 
   position: relative;
 }
-
 nav a {
   color: #444;
   text-decoration: none;
@@ -58,7 +50,6 @@ nav a {
 nav a:hover {
   color: #000;
 }
-
 nav a::before {
   content: '';
   display: block;
@@ -71,57 +62,81 @@ nav a::before {
 
   transition: all ease-in-out 250ms;
 }
-
 nav a:hover::before {
   width: 100%;
+
 }
 main {
   padding: 4rem;
-  margin-bottom: 10vh; }
+  margin-bottom: 10vh; 
+  }
   main#home {
-    overflow: hidden; }
+    overflow: hidden; 
+  }
     main#home h1 {
       margin-top: 20vh;
       font-size: 6rem; 
       color: #82b8ff;
     }
-    main#home h1 span#header:hover {
-      transform: translateY(-7%);
-    }
-    /* main#header {
+  main#about {
+    overflow: hidden; 
+  }
+    main#about h1 {
+      margin-top: 30px;
+      font-size: 6rem; 
       color: #82b8ff;
     }
-    #header:hover {
-        transform: translateY(-7%);
-    } */
-  main#about {
-    overflow: hidden; }
-    main#about h1 {
-      margin-top: 30px; }
   main#projects {
-    overflow: hidden; }
+    overflow: hidden; 
+  }
     main#projects h1 {
-      margin-top: 30px; }
+      margin-top: 30px;
+      font-size: 6rem; 
+      color: #82b8ff; 
+    }
   main#experiences {
-    overflow: hidden; }
+    overflow: hidden; 
+  }
     main#experiences h1 {
-      margin-top: 30px; }
+      margin-top: 30px;
+      font-size: 6rem; 
+      color: #82b8ff; 
+    }
   main#links {
-    overflow: hidden; }
+    overflow: hidden; 
+  }
     main#links h1 {
-      margin-top: 30px; }
+      margin-top: 30px;
+      font-size: 6rem; 
+      color: #82b8ff; 
+    }
 
 .github{
   margin-right: 10px;
+  transition: top ease 0.4s;
+  position: relative;
+  top: 0;
 }
 .github:hover{
-    transform: translateY(-7%);
+  top: -7px;
+}
+.discord{
+  margin-right: 10px;
+  transition: top ease 0.4s;
+  position: relative;
+  top: 0;
 }
 .discord:hover{
-    transform: translateY(-7%);
+  top: -7px;
+}
+.stackoverflow{
+  margin-right: 10px;
+  transition: top ease 0.4s;
+  position: relative;
+  top: 0;
 }
 .stackoverflow:hover{
-    transform: translateY(-7%);
+  top: -7px;
 }
 .homeport{
   width: 400px;
@@ -144,6 +159,9 @@ section {
   margin-right: auto;
   border-radius: 20px;
   border-color: #FFFFFF;
+  transition: top ease 0.4s;
+  position: relative;
+  top: 0;
   }
   img.small {
   border-radius: 35px;
@@ -159,7 +177,6 @@ section {
     padding-top: 10px;
     text-align:center;
   }
-
 footer {
   margin-bottom: 15px;
 }
@@ -176,44 +193,6 @@ footer {
 ::-webkit-scrollbar-thumb {
   background: #82b8ff;
 }
-
-/* Handle on hover
-::-webkit-scrollbar-thumb:hover {
-  background: #0000FF; 
-} */
-
-/* minithing{
-  /* border-color: #82b8ff;
-  border: 2.5px solid #82b8ff;
-  min-height: flex;
-  width: fit-content;
-  min-width: fit-content;
-  height: flex;
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-bottom: 24px;
-  padding-top: 10px;
-  border-radius: 20px;
-  align-items: center;
-  background-color: rgb(235, 26, 26);
-  margin-bottom: 24px;
-  min-height: flex;
-  width: fit-content;
-  min-width: fit-content;
-  height: flex;
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-bottom: 24px;
-  padding-top: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: 20px;
-  border-color: #FFFFFF;  
-  }
-  minithing img {
-  width: 70px;
-  } */
-
 * {
   box-sizing: border-box;
 }
