Updated css lots of cleanup and minor details

--- a/main.css
+++ b/main.css
@@ -78,12 +78,36 @@ main {
       font-size: 6rem; 
       color: #82b8ff;
     }
+    main#home h2 {
+      color: #82b8ff;
+    }
+    main#home h3 {
+      color: #82b8ff;
+    }
+    main#home p {
+      color: #82b8ff;
+    }
+    main#home footer{
+      color: #82b8ff;
+    }
   main#about {
     overflow: hidden; 
   }
     main#about h1 {
       margin-top: 30px;
       font-size: 6rem; 
+      color: #82b8ff;
+    }
+    main#about h2 {
+      color: #82b8ff;
+    }
+    main#about h3 {
+      color: #82b8ff;
+    }
+    main#about p {
+      color: #82b8ff;
+    }
+    main#about footer{
       color: #82b8ff;
     }
   main#projects {
@@ -94,6 +118,18 @@ main {
       font-size: 6rem; 
       color: #82b8ff; 
     }
+    main#projects h2 {
+      color: #82b8ff;
+    }
+    main#projects h3 {
+      color: #82b8ff;
+    }
+    main#projects p {
+      color: #82b8ff;
+    }
+    main#projects footer{
+      color: #82b8ff;
+    }
   main#experiences {
     overflow: hidden; 
   }
@@ -102,6 +138,18 @@ main {
       font-size: 6rem; 
       color: #82b8ff; 
     }
+    main#experiences h2 {
+      color: #82b8ff;
+    }
+    main#experiences h3 {
+      color: #82b8ff;
+    }
+    main#experiences p {
+      color: #82b8ff;
+    }
+    main#experiences footer{
+      color: #82b8ff;
+    }
   main#links {
     overflow: hidden; 
   }
@@ -109,6 +157,18 @@ main {
       margin-top: 30px;
       font-size: 6rem; 
       color: #82b8ff; 
+    }
+    main#links h2 {
+      color: #82b8ff;
+    }
+    main#links h3 {
+      color: #82b8ff;
+    }
+    main#links p {
+      color: #82b8ff;
+    }
+    main#links footer{
+      color: #82b8ff;
     }
 
 .github{
